--- a/app/src/main/res/layout/fragment_pantalla1.xml
+++ b/app/src/main/res/layout/fragment_pantalla1.xml
@@ -47,6 +47,7 @@
     </LinearLayout>
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/id_botaoPrincipal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:backgroundTint="#FBC725"
