--- a/app/src/main/res/layout/activity_loading_nova.xml
+++ b/app/src/main/res/layout/activity_loading_nova.xml
@@ -3,15 +3,15 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
-    android:background="#FBC725"
     android:layout_width="match_parent"
+    android:background="#FBC725"
     android:layout_height="match_parent"
-    tools:context=".LoadingActivity">
+    tools:context=".loadingNova">
 
     <TextView
         android:id="@+id/idText"
         android:textColor="@color/white"
-        android:layout_marginTop="110dp"
+        android:layout_marginTop="160dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="bienvenido"
@@ -40,4 +40,5 @@
         android:textColor="@color/white"
         android:layout_below="@id/idLayUm"
         />
+
 </RelativeLayout>
