--- a/app/src/main/res/layout/activity_loading_nova.xml
+++ b/app/src/main/res/layout/activity_loading_nova.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
@@ -11,7 +11,7 @@
     <TextView
         android:id="@+id/idText"
         android:textColor="@color/white"
-        android:layout_marginTop="160dp"
+        android:layout_marginTop="20dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="bienvenido"
@@ -19,19 +19,28 @@
         android:textStyle="bold"
         android:fontFamily="casual"
         android:textAlignment="center"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/idLayUm"
 
         />
     <LinearLayout
         android:id="@+id/idLayUm"
         android:orientation="horizontal"
         android:layout_width="match_parent"
-        android:layout_height="300dp"
-        android:layout_marginTop="10dp"
+        android:layout_height="150dp"
+        android:layout_marginTop="8dp"
         android:layout_below="@id/idText"
         android:background="@drawable/estanvo"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/gestion"
+        app:layout_constraintTop_toBottomOf="@id/idText"
         >
     </LinearLayout>
     <TextView
+        android:id="@+id/gestion"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Gestión de tareas"
@@ -39,6 +48,11 @@
         android:textAlignment="center"
         android:textColor="@color/white"
         android:layout_below="@id/idLayUm"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/idLayUm"
+
         />
 
-</RelativeLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
