--- a/app/src/main/res/layout/activity_loading_nova.xml
+++ b/app/src/main/res/layout/activity_loading_nova.xml
@@ -5,6 +5,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:background="#FBC725"
+    android:padding="10dp"
     android:layout_height="match_parent"
     tools:context=".loadingNova">
 
@@ -14,8 +15,8 @@
         android:layout_marginTop="20dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="bienvenido"
-        android:textSize="70sp"
+        android:text="Bem-vindo"
+        android:textSize="40sp"
         android:textStyle="bold"
         android:fontFamily="casual"
         android:textAlignment="center"
@@ -43,8 +44,8 @@
         android:id="@+id/gestion"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Gestión de tareas"
-        android:textSize="40sp"
+        android:text="@string/gerenciamento_de_tarefas"
+        android:textSize="25sp"
         android:textAlignment="center"
         android:textColor="@color/white"
         android:layout_below="@id/idLayUm"
