--- a/app/src/main/res/layout/activity_loading_nova.xml
+++ b/app/src/main/res/layout/activity_loading_nova.xml
@@ -23,9 +23,8 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/idLayUm"
+        app:layout_constraintBottom_toTopOf="@id/idLayUm" />
 
-        />
     <LinearLayout
         android:id="@+id/idLayUm"
         android:orientation="horizontal"
@@ -37,9 +36,9 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintBottom_toTopOf="@id/gestion"
-        app:layout_constraintTop_toBottomOf="@id/idText"
-        >
+        app:layout_constraintTop_toBottomOf="@id/idText">
     </LinearLayout>
+
     <TextView
         android:id="@+id/gestion"
         android:layout_width="match_parent"
@@ -52,8 +51,6 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/idLayUm"
-
-        />
+        app:layout_constraintTop_toBottomOf="@id/idLayUm" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
