--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,9 +2,11 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="background_app">#FBC725</color>
 
     <color name="laranja">#FF9800</color>
     <color name="laranja_medio">#FFC107</color>
-    <color name="laranja_melon200">#DBC789</color>
 
+    <color name="hint_edit">#6E6B6B</color>
+    <color name="background_recycleview">#DBD493</color>
 </resources>
