--- a/app/src/main/res/layout/activity_loading_nova.xml
+++ b/app/src/main/res/layout/activity_loading_nova.xml
@@ -15,6 +15,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
+        android:background="#FBC725"
         android:text="@string/welcome"
         android:textAlignment="center"
         android:textColor="@color/white"
@@ -22,13 +23,14 @@
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@id/idImagem"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
         android:id="@+id/idImagem"
         android:layout_width="match_parent"
-        android:layout_height="150dp"
+        android:layout_height="180dp"
         android:background="@drawable/img_principal"
         app:layout_constraintBottom_toTopOf="@id/idGestion"
         app:layout_constraintEnd_toEndOf="parent"
@@ -39,6 +41,7 @@
         android:id="@+id/idGestion"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="#FBC725"
         android:text="@string/task_manager"
         android:textAlignment="center"
         android:textColor="@color/white"
