--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,9 +15,10 @@
         android:layout_height="wrap_content"
         android:layout_margin="16dp"
         android:hint="@string/New_Task"
-        android:textColorHint="#6E6B6B"
+        android:textColorHint="#FFFFFFFF"
         android:textStyle="bold"
         app:layout_constraintEnd_toStartOf="@+id/btnAddTask"
+        app:layout_constraintHorizontal_bias="0.687"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -25,7 +26,8 @@
         android:id="@+id/btnAddTask"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:backgroundTint="#6E6B6B"
+        android:layout_marginTop="12dp"
+        android:backgroundTint="#FBC725"
         android:drawableEnd="@drawable/ic_add"
         android:drawableTint="@color/white"
         android:text="@string/add"
