Em activity_main.xml adicione linha 20. Em item_task.xml moidifique cor linha 20.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,6 +17,7 @@
         android:hint="@string/New_Task"
         android:textColorHint="#FFFFFFFF"
         android:textStyle="bold"
+        android:gravity="center"
         app:layout_constraintEnd_toStartOf="@+id/btnAddTask"
         app:layout_constraintHorizontal_bias="0.687"
         app:layout_constraintStart_toStartOf="parent"
