--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,6 +7,6 @@
     <color name="laranja">#FF9800</color>
     <color name="laranja_medio">#FFC107</color>
 
-    <color name="hint_edit">#6E6B6B</color>
+    <color name="hint_edit">#FFFFFFFF</color>
     <color name="background_recycleview">#DBD493</color>
 </resources>
