elimine texto editar y eliminar

--- a/app/src/main/res/layout/item_task.xml
+++ b/app/src/main/res/layout/item_task.xml
@@ -10,8 +10,7 @@
         android:id="@+id/cbCompleted"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="#FBC725"
-        android:layout_marginEnd="8dp" />
+        android:background="#FBC725" />
 
     <TextView
         android:id="@+id/tvTaskTitle"
@@ -31,20 +30,18 @@
 
     <Button
         android:id="@+id/btnEdit"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
         android:backgroundTint="#FBC725"
+        android:layout_gravity="center"
         android:textStyle="bold"
-        android:drawableEnd="@drawable/baseline_edit_24"
-        android:text="@string/editar" />
-//modificar el tamaño del boton editar y eliminar para que
-    sean mas pequeño y entre bien el edittext//
+        android:drawableTop="@drawable/baseline_edit_24" />
+
     <Button
         android:id="@+id/btnDelete"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textStyle="bold"
         android:backgroundTint="#FBC725"
-        android:drawableEnd="@drawable/baseline_delete_24"
-        android:text="@string/remove" />
+        android:drawableEnd="@drawable/baseline_delete_24" />
 </LinearLayout>
