--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,21 +13,18 @@
         android:id="@+id/etTask"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_margin="16dp"
         android:hint="@string/New_Task"
         android:textColorHint="#FFFFFFFF"
         android:textStyle="bold"
         android:gravity="center"
-        app:layout_constraintEnd_toStartOf="@+id/btnAddTask"
-        app:layout_constraintHorizontal_bias="0.687"
+        app:layout_constraintEnd_toStartOf="@id/btnAddTask"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <com.google.android.material.button.MaterialButton
+    <Button
         android:id="@+id/btnAddTask"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="12dp"
         android:backgroundTint="#FBC725"
         android:drawableEnd="@drawable/ic_add"
         android:drawableTint="@color/white"
@@ -36,6 +33,7 @@
         android:textColor="@color/white"
         android:textSize="16sp"
         android:textStyle="bold"
+        app:layout_constraintStart_toEndOf="@id/etTask"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
