--- a/app/src/main/res/layout/item_task.xml
+++ b/app/src/main/res/layout/item_task.xml
@@ -10,7 +10,8 @@
         android:id="@+id/cbCompleted"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="#FBC725" />
+        android:background="#FBC725"
+        android:layout_marginEnd="8dp" />
 
     <TextView
         android:id="@+id/tvTaskTitle"
@@ -30,12 +31,11 @@
 
     <Button
         android:id="@+id/btnEdit"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:backgroundTint="#FBC725"
-        android:layout_gravity="center"
-        android:textStyle="bold"
-        android:drawableTop="@drawable/baseline_edit_24" />
+       android:textStyle="bold"
+        android:text="@string/editar" />
 
     <Button
         android:id="@+id/btnDelete"
@@ -43,5 +43,5 @@
         android:layout_height="wrap_content"
         android:textStyle="bold"
         android:backgroundTint="#FBC725"
-        android:drawableEnd="@drawable/baseline_delete_24" />
+        android:text="@string/remove" />
 </LinearLayout>
