--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -4,7 +4,7 @@
         <!-- Customize your light theme here. -->
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
         <item name="colorPrimary">@color/white</item>
-        <item name="colorPrimaryDark">#6E6B6B</item>
+        <item name="colorPrimaryDark">@color/laranja</item>
         <item name="android:background">#A7B6D0</item>
 
     </style>
