--- a/app/src/main/res/layout/dialog_task.xml
+++ b/app/src/main/res/layout/dialog_task.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/black"
+    android:background="@color/background_app"
     android:orientation="vertical"
     android:padding="16dp">
 
@@ -11,7 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textColorHint="@color/white"
-        android:hint="Título"
+        android:hint="@string/task_title"
         android:inputType="text"
         android:textColor="@color/white" />
 
@@ -21,7 +21,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:textColorHint="@color/white"
-        android:hint="Descripción"
+        android:hint="@string/description"
         android:inputType="textMultiLine"
         android:textColor="@color/white" />
 </LinearLayout>
