--- a/app/src/main/res/layout/item_task.xml
+++ b/app/src/main/res/layout/item_task.xml
@@ -9,33 +9,18 @@
 
     <TextView
         android:id="@+id/tvTitle"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/white"
-        android:textAllCaps="true"
-        android:textColor="@color/black"
-        android:textSize="20sp"
-        android:textStyle="bold" />
+        style="@style/TextViewTitleTask" />
 
     <TextView
         android:id="@+id/tvDescription"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="4dp"
-        android:background="@color/white"
-        android:textColor="@color/black"
-        android:textSize="18sp"
-        android:textStyle="bold" />
+        style="@style/TextViewDescriptionTask" />
 
     <!-- Botón de eliminar -->
     <ImageButton
         android:id="@+id/btnDelete"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="end"
-        android:layout_marginTop="8dp"
+        style="@style/ImageButtonItemTask"
         android:src="@android:drawable/ic_menu_delete"
-        android:contentDescription="Eliminar tarea"
+        android:contentDescription="@string/delete_task"
         android:background="@null"
         app:tint="@color/black" />
 </LinearLayout>
