--- a/app/src/main/res/layout/item_task.xml
+++ b/app/src/main/res/layout/item_task.xml
@@ -3,24 +3,25 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/laranja"
     android:orientation="vertical"
-    android:padding="8dp">
+    android:padding="0dp">
 
     <TextView
         android:id="@+id/tvTitle"
+        android:textStyle="normal"
         style="@style/TextViewTitleTask" />
 
     <TextView
         android:id="@+id/tvDescription"
+        android:textStyle="normal"
         style="@style/TextViewDescriptionTask" />
 
     <!-- Botón de eliminar -->
     <ImageButton
         android:id="@+id/btnDelete"
         style="@style/ImageButtonItemTask"
-        android:src="@android:drawable/ic_menu_delete"
+        android:src="@drawable/baseline_delete"
         android:contentDescription="@string/delete_task"
         android:background="@null"
-        app:tint="@color/black" />
+        app:tint="@color/laranja" />
 </LinearLayout>
