--- a/app/src/main/res/values/style.xml
+++ b/app/src/main/res/values/style.xml
@@ -12,8 +12,8 @@
         <item name="android:textSize">20sp</item>
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
-        <item name="android:backgroundTint">@color/white</item>
-        <item name="android:textColor">@color/black</item>
+        <item name="android:backgroundTint">@color/laranja</item>
+        <item name="android:textColor">@color/white</item>
         <item name="android:layout_marginTop">20dp</item>
         <item name="android:text">@string/add_task</item>
     </style>
@@ -28,7 +28,7 @@
         <item name="android:padding">16dp</item>
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">match_parent</item>
-        <item name="android:background">@color/white</item>
+        <item name="android:background">@color/background_recycleview</item>
     </style>
 
 
@@ -71,7 +71,7 @@
     <style name="TextViewTitleTask">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
-        <item name="android:background">@color/white</item>
+        <item name="android:background">@color/background_recycleview</item>
         <item name="android:textAllCaps">true</item>
         <item name="android:textColor">@color/black</item>
         <item name="android:textSize">16sp</item>
@@ -82,7 +82,7 @@
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_marginTop">4dp</item>
-        <item name="android:background">@color/white</item>
+        <item name="android:background">@color/background_recycleview</item>
         <item name="android:textColor">@color/black</item>
         <item name="android:textSize">18sp</item>
         <item name="android:textStyle">bold</item>
