--- a/app/src/main/res/layout/activity_loading_nova.xml
+++ b/app/src/main/res/layout/activity_loading_nova.xml
@@ -2,13 +2,25 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    style="@style/ActivityLoadingNova"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:layout_margin="16dp"
+    android:background="#FBC725"
+    android:padding="10dp"
     android:id="@+id/main"
     tools:context=".LoadingNova">
 
     <TextView
         android:id="@+id/idText"
-        style="@style/TextViewWelcome"
+        android:text="@string/welcome"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:background="#FBC725"
+        android:textAlignment="center"
+        android:textColor="@color/white"
+        android:textSize="40sp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@id/idImagem"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
@@ -17,7 +29,8 @@
 
     <ImageView
         android:id="@+id/idImagem"
-        style="@style/ImagemActivityLoading"
+        android:layout_width="match_parent"
+        android:layout_height="180dp"
         android:background="@drawable/img_principal"
         app:layout_constraintBottom_toTopOf="@id/idGestion"
         app:layout_constraintEnd_toEndOf="parent"
@@ -26,7 +39,14 @@
 
     <TextView
         android:id="@+id/idGestion"
-        style="@style/TextViewGestion"
+        android:text="@string/task_manager"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="#FBC725"
+        android:textAlignment="center"
+        android:textColor="@color/white"
+        android:textSize="25sp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
