--- a/app/src/main/res/layout/dialog_task.xml
+++ b/app/src/main/res/layout/dialog_task.xml
@@ -5,6 +5,7 @@
     android:orientation="vertical"
     android:padding="0dp">
 
+
     <EditText
         android:id="@+id/etTitle"
         android:layout_width="match_parent"
@@ -12,7 +13,7 @@
         android:textColorHint="@color/black"
         android:hint="@string/task_title"
         android:inputType="text"
-        android:textColor="@color/black" />
+        android:textColor="#FF212121" />
 
     <EditText
         android:id="@+id/etDescription"
@@ -22,5 +23,5 @@
         android:textColorHint="@color/black"
         android:hint="@string/description"
         android:inputType="textMultiLine"
-        android:textColor="@color/black" />
+        android:textColor="#FF212121" />
 </LinearLayout>
