--- a/app/src/main/res/layout/activity_loading_nova.xml
+++ b/app/src/main/res/layout/activity_loading_nova.xml
@@ -13,14 +13,7 @@
     <TextView
         android:id="@+id/idText"
         android:text="@string/welcome"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:background="#FBC725"
-        android:textAlignment="center"
-        android:textColor="@color/white"
-        android:textSize="40sp"
-        android:textStyle="bold"
+        style="@style/TextViewWelcome"
         app:layout_constraintBottom_toTopOf="@id/idImagem"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
@@ -29,8 +22,7 @@
 
     <ImageView
         android:id="@+id/idImagem"
-        android:layout_width="match_parent"
-        android:layout_height="180dp"
+        style="@style/ImageViewLoading"
         android:background="@drawable/img_principal"
         app:layout_constraintBottom_toTopOf="@id/idGestion"
         app:layout_constraintEnd_toEndOf="parent"
@@ -40,13 +32,7 @@
     <TextView
         android:id="@+id/idGestion"
         android:text="@string/task_manager"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="#FBC725"
-        android:textAlignment="center"
-        android:textColor="@color/white"
-        android:textSize="25sp"
-        android:textStyle="bold"
+        style="@style/TextViewManager"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
